Aggiunte immagini e fix minori

--- a/bad/index.html
+++ b/bad/index.html
@@ -29,12 +29,14 @@
         </section>
 
         <section class="cars-section" id="auto">
-            <h2>Le Nostre Auto in Evidenza</h2>
+            <h4>Le Nostre Auto in Evidenza</h4>
             <div class="cars-grid">
                 <div class="car-card">
-                    <div class="car-image">🚗</div>
+                    <div class="car-image">
+                        <img src="./img/img-1.jpeg" class="img-fluid">
+                    </div>
                     <div class="car-details">
-                        <h3>BMW Serie 3</h3>
+                        <h5>BMW Serie 3</h5>
                         <p>Anno: 2023</p>
                         <p>Km: 15.000</p>
                         <p>Carburante: Diesel</p>
@@ -43,9 +45,11 @@
                     </div>
                 </div>
                 <div class="car-card">
-                    <div class="car-image">🚙</div>
+                    <div class="car-image">
+                        <img src="./img/img-2.jpeg" class="img-fluid">
+                    </div>
                     <div class="car-details">
-                        <h3>Audi Q5</h3>
+                        <h5>Audi Q5</h5>
                         <p>Anno: 2022</p>
                         <p>Km: 25.000</p>
                         <p>Carburante: Benzina</p>
@@ -54,9 +58,11 @@
                     </div>
                 </div>
                 <div class="car-card">
-                    <div class="car-image">🏎️</div>
+                    <div class="car-image">
+                        <img src="./img/img-3.jpeg" class="img-fluid">
+                    </div>
                     <div class="car-details">
-                        <h3>Mercedes Classe C</h3>
+                        <h5>Mercedes Classe C</h5>
                         <p>Anno: 2023</p>
                         <p>Km: 8.000</p>
                         <p>Carburante: Ibrido</p>
@@ -67,7 +73,7 @@
         </section>
 
         <section class="accordion" id="servizi">
-            <h2>I Nostri Servizi</h2>
+            <h4>I Nostri Servizi</h4>
             <div class="accordion-item">
                 <div class="accordion-header" onclick="toggleAccordion(0)">
                     Vendita Auto Nuove e Usate
@@ -95,26 +101,26 @@
         </section>
 
         <section class="contact-info" id="contatti">
-            <h2>Contattaci</h2>
+            <h4>Contattaci</h4>
             <div class="contact-grid">
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
-                    <h3>Indirizzo</h3>
+                    <h5>Indirizzo</h5>
                     <p>Via Roma 123<br>10100 Torino, Italia</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">📞</div>
-                    <h3>Telefono</h3>
+                    <h5>Telefono</h5>
                     <p>+39 011 123 4567</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">✉️</div>
-                    <h3>Email</h3>
+                    <h5>Email</h5>
                     <p>info@autoexcel.it</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">🕒</div>
-                    <h3>Orari</h3>
+                    <h5>Orari</h5>
                     <p>Lun-Ven: 9:00-18:00<br>Sab: 9:00-13:00</p>
                 </div>
             </div>
@@ -125,7 +131,7 @@
     <div id="preventivo-modal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Richiedi Preventivo</h2>
+            <h4>Richiedi Preventivo</h4>
             <form id="preventivo-form">
                 <div class="form-group">
                     <label>Nome</label>
